logs/validate.20260324-193410.log
error[E0277]: the trait bound `<I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
   --> src/Chap37/BSTSetAVLMtEph.rs:168:9
    |
168 | /         for value in values {
169 | |             let _ = tree.insert(value);
170 | |         }
    | |_________^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `<I as std::iter::IntoIterator>::IntoIter`
    |
help: consider further restricting the associated type
    |
164 |         I: IntoIterator<Item = T>, <I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew
    |                                    ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `<I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
   --> src/Chap37/BSTSetAVLMtEph.rs:168:22
    |
168 |         for value in values {
    |                      ^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `<I as std::iter::IntoIterator>::IntoIter`
    |
help: consider further restricting the associated type
    |
164 |         I: IntoIterator<Item = T>, <I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew
    |                                    ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: can't compare `&T` with `T`
   --> src/Chap37/BSTSetAVLMtEph.rs:220:31
    |
220 |                 .filter(|x| x != target)
    |                               ^^ no implementation for `&T == T`
    |
    = help: the trait `std::cmp::PartialEq<T>` is not implemented for `&T`
    = note: required for `&&T` to implement `std::cmp::PartialEq<&T>`
help: consider dereferencing here
    |
220 |                 .filter(|x| *x != target)
    |                             +
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
    |
181 |     impl<T: StTInMtT + Ord + TotalOrder> BSTSetAVLMtEphTrait<T> for BSTSetAVLMtEph<T> where &T: std::cmp::PartialEq<T> {
    |                                                                                       ++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `<I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
   --> src/Chap37/BSTSetRBMtEph.rs:145:9
    |
145 | /         for value in values {
146 | |             let _ = tree.insert(value);
147 | |         }
    | |_________^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `<I as std::iter::IntoIterator>::IntoIter`
    |
help: consider further restricting the associated type
    |
141 |     fn from_sorted_iter<T: StTInMtT + Ord + TotalOrder, I: IntoIterator<Item = T>>(values: I) -> (set: BSTSetRBMtEph<T> where <I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew)
    |                                                                                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `<I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
   --> src/Chap37/BSTSetRBMtEph.rs:145:22
    |
145 |         for value in values {
    |                      ^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `<I as std::iter::IntoIterator>::IntoIter`
    |
help: consider further restricting the associated type
    |
141 |     fn from_sorted_iter<T: StTInMtT + Ord + TotalOrder, I: IntoIterator<Item = T>>(values: I) -> (set: BSTSetRBMtEph<T> where <I as std::iter::IntoIterator>::IntoIter: vstd::pervasive::ForLoopGhostIteratorNew)
    |                                                                                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: can't compare `&T` with `T`
   --> src/Chap37/BSTSetRBMtEph.rs:190:31
    |
190 |                 .filter(|x| x != target)
    |                               ^^ no implementation for `&T == T`
    |
    = help: the trait `std::cmp::PartialEq<T>` is not implemented for `&T`
    = note: required for `&&T` to implement `std::cmp::PartialEq<&T>`
help: consider dereferencing here
    |
190 |                 .filter(|x| *x != target)
    |                             +
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
    |
151 |     impl<T: StTInMtT + Ord + TotalOrder> BSTSetRBMtEphTrait<T> for BSTSetRBMtEph<T> where &T: std::cmp::PartialEq<T> {
    |                                                                                     ++++++++++++++++++++++++++++++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
Elapsed: 14s
